--- a/full_stack_restaurant/meals/templates/meals/home.html
+++ b/full_stack_restaurant/meals/templates/meals/home.html
@@ -1,44 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
+{%  extends 'meals/app.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>My Website</title>
-</head>
-
-<body>
-    <main>
+{% block content %}
+        <div class="container my-5 text-center" style="max-width:580px">
+            <h1>My Restaurant</h1>
+            <p class="lead">Make yourself comfortable and wait for the food.
+            </p>
+            <button type="button" class="btn btn-primary">Buy Now!</button>
+            <a href="{%url 'contact-us'%}" type="button" class="btn btn-secondary">Contact us</a>
+        </div>
+    
         <div class="container">
-            <h1>Welcome to My Website</h1>
-            <div class="row">
-                {%  for meal in meals %}
+            <div class="row row-cols-3 g-4">
+                {% for meal in meals %}
                 <div class="col">
                     <div class="card">
                         <div class="card-image">
-                            <img src="{{meal.image.url}}" alt="">
+                            <img src="{{meal.image.url}}" class="card-img-top" alt="...">
+                           
                         </div>
                         <div class="card-body">
-                            <h2> {{meal.name}}</h2>
-                            <p>
-                                {{ meal.description}}
-                            </p>
+                            <h5 class="card-title">{{meal.name}}</h5>
+                            <p class="card-text">{{meal.description}}</p>
+                            <a href="#" class="btn btn-primary">BUY</a>
                         </div>
                     </div>
                 </div>
-                {% endfor %}
+                {% endfor%}
             </div>
         </div>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-        crossorigin="anonymous"></script>
-</body>
+    
+{% endblock %}
 
-</html>
